correction harry potter

--- a/src/app/random-user/random-user.component.html
+++ b/src/app/random-user/random-user.component.html
@@ -1,2 +1,3 @@
 
-<app-random-user-card [randomUser]="randomUser"></app-random-user-card>
+<app-random-user-card [randomUserDaughter]="randomUser"></app-random-user-card>
+<!--<app-liked-users *ngIf="!isOnProfileView"></app-liked-users>-->
