--- a/src/app/random-user-card/random-user-card.component.html
+++ b/src/app/random-user-card/random-user-card.component.html
@@ -1,16 +1,17 @@
 
-<div class="col-5 mx-auto" *ngIf="randomUser">
+<div class="col-lg-5 col-md-10 mx-auto" *ngIf="randomUserDaughter">
   <div class="card-user">
     <div class="container-image" (click)="smallDisplay = !smallDisplay">
-      <img [src]="randomUser.picture.large" [alt]="randomUser.name.first">
+      <img [src]="randomUserDaughter.picture.large" [alt]="randomUserDaughter.name.first">
       <div class="info-profil" [hidden]="smallDisplay">
-        <p>{{randomUser.name.first}}, {{randomUser.dob.age}}</p>
-        <fa-icon class="heart" [icon]="faHeart"></fa-icon>
+        <fa-icon class="heart" [icon]="iconFaHeart"></fa-icon>
+        <fa-icon class="heart" [icon]="faCrosshairs"></fa-icon>
+        <p>{{randomUserDaughter.name.first}}, {{randomUserDaughter.dob.age}}</p>
       </div>
     </div>
     <div class="container-info" [hidden]="!smallDisplay">
-      {{randomUser.name.first}}, {{randomUser.dob.age}}
-      <p>{{randomUser.location.city}}, {{randomUser.location.country}}</p>
+      {{randomUserDaughter.name.first}}, {{randomUserDaughter.dob.age}}
+      <p>{{randomUserDaughter.location.city}}, {{randomUserDaughter.location.country}}</p>
     </div>
   </div>
 </div>
