--- a/src/app/harry-potter/houses/houses.component.html
+++ b/src/app/harry-potter/houses/houses.component.html
@@ -1,4 +1,17 @@
 
+<nav aria-label="breadcrumb">
+  <ol class="breadcrumb">
+    <li class="breadcrumb-item">
+      <a routerLink="/harry-potter/wizards">
+        Wizards
+      </a>
+    </li>
+    <li class="breadcrumb-item active" aria-current="page">
+      Houses
+    </li>
+  </ol>
+</nav>
+
 <table class="table table-striped table-hover table-dark mt-3">
   <thead>
     <tr>
