--- a/src/app/harry-potter/wizard/wizard.component.html
+++ b/src/app/harry-potter/wizard/wizard.component.html
@@ -1,4 +1,12 @@
 
+<nav aria-label="breadcrumb">
+  <ol class="breadcrumb">
+    <li class="breadcrumb-item active" aria-current="page">
+      Wizards
+    </li>
+  </ol>
+</nav>
+
 <table class="table table-striped table-hover table-dark mt-3">
   <thead>
   <tr>
@@ -7,7 +15,7 @@
   </tr>
   </thead>
   <tbody>
-    <tr *ngFor="let wizard of wizards">
+    <tr *ngFor="let wizard of wizards" routerLink="/harry-potter/wizards/{{wizard.id}}/elixirs">
       <td>{{wizard.firstName}} {{wizard.lastName}}</td>
       <td>
         <strong>
