--- a/src/styles/random_user.scss
+++ b/src/styles/random_user.scss
@@ -24,6 +24,9 @@
       .heart {
         color: red;
         z-index: 10;
+        &:hover {
+          color: hotpink;
+        }
       }
     }
   }
